<resources>
    <string name="app_name">LoginRegister</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_welcome_description">Enter your credentials</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_forgot_password">Forgot your Password?</string>
    <string name="register_description">Register</string>
    <string name="register_name">Name</string>
    <string name="register">Register</string>
</resources>